--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -4,5 +4,15 @@
         "description": "Bạn phải thay đổi để làm mọi người hạnh phúc",
         "button1": "Làm kiểm tra ngay",
         "button2": "Bắt đầu miễn phí"
+    },
+    "header": {
+        "homepage": "Trang chủ",
+        "user": "Người dùng",
+        "admin": "Quản trị",
+        "setting": "Cài đặt",
+        "login": "Đăng nhập",
+        "signup": "Đăng ký",
+        "profile": "Thông tin",
+        "logout": "Đăng xuất"
     }
 }
